--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Oswald", sans-serif;
+  user-select: none;
 }
 html, body {
   width: 100%;
