--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   font-family: "Oswald", sans-serif;
   user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 html, body {
   width: 100%;
